Windows shadows style changed.

--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -2,10 +2,14 @@ backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
 shadow = true;
-shadow-radius = 10;
-shadow-offset-x = -10;
-shadow-offset-y = -10;
-shadow-opacity = 0.35;
+shadow-radius = 9;
+shadow-offset-x = -9;
+shadow-offset-y = -9;
+shadow-opacity = 0.50;
 
 inactive-dim = 0.2;
 blur-background = true;
+
+shadow-exclude = [
+	"window_type = 'dock'"
+];
