--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,6 +1,6 @@
 set $mod Mod4
 
-bindsym $mod+Return exec "~/Downloads/alacritty/target/release/alacritty"
+bindsym $mod+Return exec "alacritty"
 bindsym $mod+Shift+q kill
 
 for_window [class="^.*"] border pixel 0
@@ -13,21 +13,24 @@ exec --no-startup-id sh -c "compton"
 exec --no-startup-id sh -c "setxkbmap -model pc105 -layout us,ru -variant , -option grp:caps_toggle misc:typo lv3:ralt_switch"
 exec --no-startup-id sh -c "xset r rate 190 35"
 exec --no-startup-id sh -c "yandex-disk start"
+exec --no-startup-id sh -c "dunst"
+exec --no-startup-id sh -c "sudo chown eanmos:eanmos /sys/class/backlight/amdgpu_bl1/brightness"
+exec --no-startup-id sh -c "xset s off"
 
-font pango:JetBrains Mono Italic 8
-title_align center
+font pango:JetBrains Mono 8
+title_align left
 
 exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
 exec --no-startup-id nm-applet
 
 bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+"
 bindsym XF86AudioLowerVolume exec "amixer set Master 5%-"
-bindsym XF86MonBrightnessUp exec "sudo sh ~/.brightness.sh up"
-bindsym XF86MonBrightnessDown exec "sudo sh ~/.brightness.sh down"
+bindsym XF86MonBrightnessUp exec "sh ~/.brightness.sh up"
+bindsym XF86MonBrightnessDown exec "sh ~/.brightness.sh down"
 
 floating_modifier $mod
 
-bindsym $mod+d exec "dmenu_run -fn 'JetBrains Mono-8' -sb '#e1ae69' -sf '#2a2a2a'"
+bindsym $mod+d exec "bash -c $(cat ~/.applications | dmenu -fn 'JetBrains Mono-8' -sb '#e1ae69' -sf '#2a2a2a')"
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
