--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -18,14 +18,14 @@ tabspaces: 4
 
 font:
   normal:
-    family: JetBrains Mono Nerd Font
+    family: Consolas
     style: Regular
 
-  size: 7.0
+  size: 8
 
   offset:
     x: 0
-    y: 2
+    y: 3
   glyph_offset:
     x: 0
     y: 0
