Changed font in the terminal to Iosevka SS03.

--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -18,10 +18,10 @@ tabspaces: 4
 
 font:
   normal:
-    family: Consolas
+    family: Iosevka SS03
     style: Regular
 
-  size: 8
+  size: 8.5
 
   offset:
     x: 0
