--- a/.config/compton/compton.conf
+++ b/.config/compton/compton.conf
@@ -1,15 +1,45 @@
 backend = "glx";
 glx-no-stencil = true;
 glx-copy-from-front = false;
-shadow = true;
-shadow-radius = 9;
-shadow-offset-x = -9;
-shadow-offset-y = -9;
-shadow-opacity = 0.50;
+
+#
+# Dim.
+#
 
 inactive-dim = 0.2;
-blur-background = true;
+
+#
+# Shadows.
+#
+
+shadow = true;
+shadow-radius = 13;
+shadow-offset-x = -13;
+shadow-offset-y = -13;
+shadow-opacity = 0.65;
 
 shadow-exclude = [
 	"window_type = 'dock'"
 ];
+
+#
+# Blur.
+#
+
+blur-background = true;
+blur-background-frame = true;
+blur-background-fixed = false;
+
+blur-background-exclude = [
+	"window_type = 'dock'",
+	"window_type = 'desktop'"
+];
+
+#
+# Fading.
+#
+
+fading = true;
+fade-delta = 8;
+fade-in-step = 0.09;
+fade-out-step = 0.06;
