--- a/.config/i3/config
+++ b/.config/i3/config
@@ -1,132 +1,103 @@
-set $mod Mod4
+#
+# Modifier key.
+#
 
-bindsym $mod+Return exec "alacritty"
-bindsym $mod+Shift+q kill
+set $mod Mod4
+floating_modifier $mod
+
+#
+# Window borders.
+#
 
 for_window [class="^.*"] border pixel 0
+
+#
+# Gaps between windows.
+#
 
 gaps inner 16
 gaps outer 32
 
-exec --no-startup-id sh -c "hsetroot -solid '#111111'"
+#
+# Autostart.
+#
+
 exec --no-startup-id sh -c "compton"
 exec --no-startup-id sh -c "setxkbmap -model pc105 -layout us,ru -variant , -option grp:caps_toggle misc:typo lv3:ralt_switch"
 exec --no-startup-id sh -c "xset r rate 190 35"
 exec --no-startup-id sh -c "yandex-disk start"
 exec --no-startup-id sh -c "dunst"
+exec --no-startup-id sh -c "hsetroot -fill ~/.wallpaper.png"
 exec --no-startup-id sh -c "sudo chown eanmos:eanmos /sys/class/backlight/amdgpu_bl1/brightness"
 exec --no-startup-id sh -c "xset s off"
 
-font pango:JetBrains Mono 8
-title_align left
+#
+# Key bindings.
+#
 
-exec --no-startup-id xss-lock --transfer-sleep-lock -- i3lock --nofork
-exec --no-startup-id nm-applet
+bindsym $mod+Shift+q            kill
+bindsym $mod+Shift+r            restart
 
-bindsym XF86AudioRaiseVolume exec "amixer set Master 5%+"
-bindsym XF86AudioLowerVolume exec "amixer set Master 5%-"
-bindsym XF86MonBrightnessUp exec "sh ~/.brightness.sh up"
-bindsym XF86MonBrightnessDown exec "sh ~/.brightness.sh down"
+# Applications launching.
+bindsym $mod+Return             exec "alacritty"
+bindsym $mod+d                  exec "bash -c $(cat ~/.applications | dmenu -fn 'Iosevka SS03-9.5' -sb '#e1ae69' -sf '#2a2a2a')"
 
-floating_modifier $mod
+# Volume control.
+bindsym XF86AudioRaiseVolume    exec "amixer set Master 5%+"
+bindsym XF86AudioLowerVolume    exec "amixer set Master 5%-"
 
-bindsym $mod+d exec "bash -c $(cat ~/.applications | dmenu -fn 'JetBrains Mono-8' -sb '#e1ae69' -sf '#2a2a2a')"
-# There also is the (new) i3-dmenu-desktop which only displays applications
-# shipping a .desktop file. It is a wrapper around dmenu, so you need that
-# installed.
-# bindsym $mod+d exec --no-startup-id i3-dmenu-desktop
+# Brightness control.
+bindsym XF86MonBrightnessUp     exec "sh ~/.brightness.sh up"
+bindsym XF86MonBrightnessDown   exec "sh ~/.brightness.sh down"
 
-# Change focus:
-bindsym $mod+h focus left
-bindsym $mod+j focus down
-bindsym $mod+k focus up
-bindsym $mod+l focus right
+# Windows focus control.
+bindsym $mod+h                  focus left
+bindsym $mod+j                  focus down
+bindsym $mod+k                  focus up
+bindsym $mod+l                  focus right
 
-bindsym $mod+Shift+h move left
-bindsym $mod+Shift+j move down
-bindsym $mod+Shift+k move up
-bindsym $mod+Shift+l move right
+# Windows movements.
+bindsym $mod+Shift+h            move left
+bindsym $mod+Shift+j            move down
+bindsym $mod+Shift+k            move up
+bindsym $mod+Shift+l            move right
 
-bindsym $mod+i split h
-bindsym $mod+o split v
+# Layout control.
+bindsym $mod+f                  fullscreen toggle
+bindsym $mod+Shift+space        floating toggle
+bindsym $mod+e                  layout toggle split
+bindsym $mod+s                  layout stacking
+bindsym $mod+w                  layout tabbed
 
-bindsym $mod+f fullscreen toggle
+# Workspaces.
+bindsym $mod+1                  workspace number 1
+bindsym $mod+2                  workspace number 2
+bindsym $mod+3                  workspace number 3
+bindsym $mod+4                  workspace number 4
+bindsym $mod+5                  workspace number 5
+bindsym $mod+6                  workspace number 6
+bindsym $mod+7                  workspace number 7
+bindsym $mod+8                  workspace number 8
+bindsym $mod+9                  workspace number 9
+bindsym $mod+0                  workspace number 10
+bindsym $mod+Shift+1            move container to workspace number 1
+bindsym $mod+Shift+2            move container to workspace number 2
+bindsym $mod+Shift+3            move container to workspace number 3
+bindsym $mod+Shift+4            move container to workspace number 4
+bindsym $mod+Shift+5            move container to workspace number 5
+bindsym $mod+Shift+6            move container to workspace number 6
+bindsym $mod+Shift+7            move container to workspace number 7
+bindsym $mod+Shift+8            move container to workspace number 8
+bindsym $mod+Shift+9            move container to workspace number 9
+bindsym $mod+Shift+0            move container to workspace number 10
 
-bindsym $mod+s layout stacking
-bindsym $mod+w layout tabbed
-bindsym $mod+e layout toggle split
-
-bindsym $mod+Shift+space floating toggle
-
-# change focus between tiling / floating windows
-bindsym $mod+space focus mode_toggle
-
-bindsym $mod+a focus parent
-
-# Define names for default workspaces for which we configure key bindings later on.
-# We use variables to avoid repeating the names in multiple places.
-set $ws1 "1"
-set $ws2 "2"
-set $ws3 "3"
-set $ws4 "4"
-set $ws5 "5"
-set $ws6 "6"
-set $ws7 "7"
-set $ws8 "8"
-set $ws9 "9"
-set $ws10 "10"
-
-bindsym $mod+1 workspace number $ws1
-bindsym $mod+2 workspace number $ws2
-bindsym $mod+3 workspace number $ws3
-bindsym $mod+4 workspace number $ws4
-bindsym $mod+5 workspace number $ws5
-bindsym $mod+6 workspace number $ws6
-bindsym $mod+7 workspace number $ws7
-bindsym $mod+8 workspace number $ws8
-bindsym $mod+9 workspace number $ws9
-bindsym $mod+0 workspace number $ws10
-
-bindsym $mod+Shift+1 move container to workspace number $ws1
-bindsym $mod+Shift+2 move container to workspace number $ws2
-bindsym $mod+Shift+3 move container to workspace number $ws3
-bindsym $mod+Shift+4 move container to workspace number $ws4
-bindsym $mod+Shift+5 move container to workspace number $ws5
-bindsym $mod+Shift+6 move container to workspace number $ws6
-bindsym $mod+Shift+7 move container to workspace number $ws7
-bindsym $mod+Shift+8 move container to workspace number $ws8
-bindsym $mod+Shift+9 move container to workspace number $ws9
-bindsym $mod+Shift+0 move container to workspace number $ws10
-
-bindsym $mod+Shift+c reload
-bindsym $mod+Shift+r restart
-bindsym $mod+Shift+e exec "i3-nagbar -t warning -m 'You pressed the exit shortcut. Do you really want to exit i3? This will end your X session.' -B 'Yes, exit i3' 'i3-msg exit'"
-
-# class                 border  bground text    indicator child_border
-client.focused          #454545 #454545 #FFFFFF #2E9EF4   #285577
-client.focused_inactive #202020 #202020 #CCCCCC #484E50   #5F676A
-client.unfocused        #202020 #202020 #CCCCCC #292D2E   #222222
+bindsym $mod+r                  mode "resize"
 
 mode "resize" {
-        # Pressing left will shrink the window’s width.
-        # Pressing right will grow the window’s width.
-        # Pressing up will shrink the window’s height.
-        # Pressing down will grow the window’s height.
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+	bindsym h resize grow width 10 px or 10 ppt
+	bindsym j resize grow height 10 px or 10 ppt
+	bindsym k resize shrink height 10 px or 10 ppt
+	bindsym l resize shrink width 10 px or 10 ppt
 
-        # same bindings, but for the arrow keys
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
-
-        # back to normal: Enter or Escape or $mod+r
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
-        bindsym $mod+r mode "default"
+	bindsym Escape mode "default"
 }
-
-bindsym $mod+r mode "resize"
