--- a/.config/i3/config
+++ b/.config/i3/config
@@ -90,14 +90,7 @@ bindsym $mod+Shift+7            move container to workspace number 7
 bindsym $mod+Shift+8            move container to workspace number 8
 bindsym $mod+Shift+9            move container to workspace number 9
 bindsym $mod+Shift+0            move container to workspace number 10
-
-bindsym $mod+r                  mode "resize"
-
-mode "resize" {
-	bindsym h resize grow width 10 px or 10 ppt
-	bindsym j resize grow height 10 px or 10 ppt
-	bindsym k resize shrink height 10 px or 10 ppt
-	bindsym l resize shrink width 10 px or 10 ppt
-
-	bindsym Escape mode "default"
-}
+bindsym $mod+plus               resize grow width 5 px or 5 ppt
+bindsym $mod+minus              resize shrink width 5 px or 5 ppt
+bindsym $mod+Shift+plus         resize grow height 5 px or 5 ppt
+bindsym $mod+Shift+minus        resize shrink height 5 px or 5 ppt
