--- a/.config/i3/config
+++ b/.config/i3/config
@@ -22,7 +22,7 @@ gaps outer 32
 # Autostart.
 #
 
-exec --no-startup-id sh -c "compton"
+exec --no-startup-id sh -c "picom"
 exec --no-startup-id sh -c "setxkbmap -model pc105 -layout us,ru -variant , -option grp:caps_toggle misc:typo lv3:ralt_switch"
 exec --no-startup-id sh -c "xset r rate 190 35"
 exec --no-startup-id sh -c "yandex-disk start"
