--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,7 @@
 [submodule ".config/nvim/bundle/vim-gitgutter"]
 	path = .config/nvim/bundle/vim-gitgutter
 	url = https://github.com/airblade/vim-gitgutter.git
+
+[submodule ".config/nvim/bundle/supertab"]
+	path = .config/nvim/bundle/supertab
+	url = https://github.com/ervandew/supertab
